@@ -395,6 +395,7 @@ define command {
        NOTIFY_NOTIFICATIONAUTHOR='$NOTIFICATIONAUTHOR$' \
        NOTIFY_NOTIFICATIONAUTHORNAME='$NOTIFICATIONAUTHORNAME$' \
        NOTIFY_NOTIFICATIONAUTHORALIAS='$NOTIFICATIONAUTHORALIAS$' \
+       NOTIFY_HOSTGROUPNAMES='$HOSTGROUPNAMES$' \
        NOTIFY_HOSTTAGS='$_HOSTTAGS$' \
        NOTIFY_HOST_SL='$_HOSTEC_SL$' \
        NOTIFY_SVC_SL='$_SERVICEEC_SL$' \
